Added PowerAutomate applied skills

--- a/index.html
+++ b/index.html
@@ -2328,6 +2328,26 @@
                         <span class="cert-status">Active</span>
                     </div>
                 </div>
+                <div class="cert-card card">
+                    <div class="cert-image">
+                        <a href="https://learn.microsoft.com/api/credentials/share/en-us/NaqeebUllah-3132/1B947EA48E92A136?sharingId=EDB1121DF969CE90"
+                            target="_blank">
+                            <img src="Images/Power Automate Applied skills.png" alt="Model-Driven App Certification">
+                        </a>
+                    </div>
+
+                    <div class="cert-content">
+                        <h3>Microsoft Power Automate</h3>
+                        <p class="cert-subtitle">Microsoft Applied Skills</p>
+
+                        <div class="cert-meta">
+                            <span><i class="fab fa-microsoft"></i> Microsoft Certified</span>
+                            <span>Issued: January 2026</span>
+                        </div>
+
+                        <span class="cert-status">Active</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
