--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             --primary: #6C63FF;
             --primary-light: #8B85FF;
             --secondary: #4A44C6;
-            --dark: #0A0A0F;
-            --dark-card: #161622;
-            --light: #F5F5FF;
-            --gray: #8A8AA3;
+            --dark: #ffffff;
+            --dark-card: #f8f9ff;
+            --light: #333333;
+            --gray: #666666;
             --white: #ffffff;
             --gradient: linear-gradient(135deg, #6C63FF 0%, #4A44C6 50%, #8B85FF 100%);
             --gradient-2: linear-gradient(135deg, #6C63FF 0%, #FF6B9D 100%);
-            --shadow: 0 20px 40px rgba(108, 99, 255, 0.15);
+            --shadow: 0 20px 40px rgba(108, 99, 255, 0.1);
             --transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
@@ -48,7 +48,7 @@
             overflow-x: hidden;
         }
 
-        /* Modern Background */
+        /* Light Background */
         body::before {
             content: '';
             position: fixed;
@@ -57,8 +57,8 @@
             width: 100%;
             height: 100%;
             background:
-                radial-gradient(circle at 15% 50%, rgba(108, 99, 255, 0.08) 0%, transparent 40%),
-                radial-gradient(circle at 85% 30%, rgba(255, 107, 157, 0.05) 0%, transparent 40%);
+                radial-gradient(circle at 15% 50%, rgba(108, 99, 255, 0.05) 0%, transparent 40%),
+                radial-gradient(circle at 85% 30%, rgba(255, 107, 157, 0.03) 0%, transparent 40%);
             z-index: -2;
             animation: gradientShift 15s ease-in-out infinite alternate;
         }
@@ -73,7 +73,7 @@
             }
         }
 
-        /* Grid Overlay */
+        /* Light Grid Overlay */
         body::after {
             content: '';
             position: fixed;
@@ -82,12 +82,12 @@
             width: 100%;
             height: 100%;
             background-image:
-                linear-gradient(rgba(108, 99, 255, 0.02) 1px, transparent 1px),
-                linear-gradient(90deg, rgba(108, 99, 255, 0.02) 1px, transparent 1px);
+                linear-gradient(rgba(108, 99, 255, 0.03) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(108, 99, 255, 0.03) 1px, transparent 1px);
             background-size: 40px 40px;
             z-index: -1;
             pointer-events: none;
-            opacity: 0.4;
+            opacity: 0.3;
         }
 
         .container {
@@ -108,7 +108,7 @@
             left: 0;
             width: 100%;
             z-index: 1000;
-            background: rgba(10, 10, 15, 0.9);
+            background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(20px);
             border-bottom: 1px solid rgba(108, 99, 255, 0.1);
             transition: var(--transition);
@@ -123,11 +123,10 @@
 
         .nav-scrolled {
             padding: 10px 0;
-            background: rgba(10, 10, 15, 0.95);
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+            background: rgba(255, 255, 255, 0.98);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
         }
 
-        /* Modern Logo */
         /* Modern Logo */
         .logo-wrapper {
             display: flex;
@@ -146,7 +145,7 @@
             justify-content: center;
             position: relative;
             overflow: hidden;
-            box-shadow: 0 8px 25px rgba(108, 99, 255, 0.3);
+            box-shadow: 0 8px 25px rgba(108, 99, 255, 0.2);
             transition: var(--transition);
         }
 
@@ -200,7 +199,7 @@
 
         .logo-title {
             font-size: 11px;
-            color: #8A8AA3;
+            color: #666666;
             font-weight: 500;
             letter-spacing: 1.2px;
             text-transform: uppercase;
@@ -214,7 +213,7 @@
         }
 
         .nav-links a {
-            color: #ffffff;
+            color: #333333;
             text-decoration: none;
             font-weight: 500;
             font-size: 15px;
@@ -243,7 +242,7 @@
         }
 
         .nav-links a:hover {
-            color: #8B85FF;
+            color: #6C63FF;
         }
 
         .nav-links a:hover::after {
@@ -265,13 +264,13 @@
             transition: var(--transition);
             border: none;
             cursor: pointer;
-            box-shadow: 0 5px 15px rgba(108, 99, 255, 0.3);
+            box-shadow: 0 5px 15px rgba(108, 99, 255, 0.2);
             margin-left: 20px;
         }
 
         .cv-download-btn:hover {
             transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(108, 99, 255, 0.4);
+            box-shadow: 0 8px 25px rgba(108, 99, 255, 0.3);
         }
 
         /* Hero Section */
@@ -295,7 +294,7 @@
             align-items: center;
             gap: 10px;
             background: rgba(108, 99, 255, 0.1);
-            color: #8B85FF;
+            color: #6C63FF;
             padding: 10px 20px;
             border-radius: 50px;
             margin-bottom: 25px;
@@ -319,7 +318,7 @@
 
         .hero-content p {
             font-size: 1.2rem;
-            color: #8A8AA3;
+            color: #666666;
             margin-bottom: 40px;
             max-width: 600px;
         }
@@ -349,7 +348,7 @@
             position: relative;
             overflow: hidden;
             z-index: 1;
-            box-shadow: 0 10px 25px rgba(108, 99, 255, 0.3);
+            box-shadow: 0 10px 25px rgba(108, 99, 255, 0.2);
         }
 
         .btn::before {
@@ -369,7 +368,7 @@
 
         .btn:hover {
             transform: translateY(-3px);
-            box-shadow: 0 15px 35px rgba(108, 99, 255, 0.4);
+            box-shadow: 0 15px 35px rgba(108, 99, 255, 0.3);
         }
 
         .btn-outline {
@@ -400,22 +399,20 @@
         }
 
         .stat-text {
-            color: #8A8AA3;
+            color: #666666;
             font-size: 0.9rem;
             text-transform: uppercase;
             letter-spacing: 1px;
         }
 
-        
-
         /* Cards */
         .card {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(20px);
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
             border-radius: 20px;
             padding: 35px;
             border: 1px solid rgba(108, 99, 255, 0.1);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
             transition: var(--transition);
             position: relative;
             overflow: hidden;
@@ -423,7 +420,7 @@
 
         .card:hover {
             transform: translateY(-8px);
-            box-shadow: 0 20px 40px rgba(108, 99, 255, 0.15);
+            box-shadow: 0 20px 40px rgba(108, 99, 255, 0.1);
             border-color: rgba(108, 99, 255, 0.2);
         }
 
@@ -486,7 +483,7 @@
 
         .bar {
             height: 8px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(108, 99, 255, 0.1);
             border-radius: 10px;
             overflow: hidden;
         }
@@ -774,7 +771,7 @@
             padding: 12px 18px;
             border-radius: 12px;
             text-decoration: none;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.9);
             border: 1px solid rgba(108, 99, 255, 0.15);
             transition: var(--transition);
             color: var(--light);
@@ -784,26 +781,23 @@
         .social-btn:hover {
             transform: translateY(-3px);
             border-color: transparent;
+            color: white;
         }
 
         .social-btn.email:hover {
             background: linear-gradient(135deg, #EA4335, #D44638);
-            color: white;
         }
 
         .social-btn.linkedin:hover {
             background: linear-gradient(135deg, #0077B5, #00A0DC);
-            color: white;
         }
 
         .social-btn.github:hover {
             background: linear-gradient(135deg, #333, #24292e);
-            color: white;
         }
 
         .social-btn.facebook:hover {
             background: linear-gradient(135deg, #1877F2, #0D8AF0);
-            color: white;
         }
 
         .social-icon {
@@ -813,7 +807,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: rgba(0, 0, 0, 0.1);
+            background: rgba(0, 0, 0, 0.05);
         }
 
         .social-icon i {
@@ -829,7 +823,7 @@
         .form-control {
             width: 100%;
             padding: 16px 20px;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.9);
             border: 1px solid rgba(108, 99, 255, 0.2);
             border-radius: 12px;
             font-family: 'Poppins', sans-serif;
@@ -869,9 +863,10 @@
 
         /* Footer */
         footer {
-            background: linear-gradient(135deg, #0a0a0f 0%, #1A1A2E 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #f8f9ff 100%);
             padding: 60px 0 30px;
             position: relative;
+            border-top: 1px solid rgba(108, 99, 255, 0.1);
         }
 
         footer::before {
@@ -911,7 +906,7 @@
         }
 
         .footer-links a {
-            color: rgba(255, 255, 255, 0.7);
+            color: #666666;
             text-decoration: none;
             transition: var(--transition);
         }
@@ -924,8 +919,8 @@
         .copyright {
             text-align: center;
             padding-top: 30px;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            color: rgba(255, 255, 255, 0.6);
+            border-top: 1px solid rgba(0, 0, 0, 0.1);
+            color: #666666;
             font-size: 0.9rem;
         }
 
@@ -937,6 +932,7 @@
             .contact-container {
                 grid-template-columns: 1fr;
             }
+
             .hero-content h1 {
                 font-size: 3.2rem;
             }
@@ -960,7 +956,7 @@
                 top: 70px;
                 left: 0;
                 width: 100%;
-                background: rgba(10, 10, 15, 0.95);
+                background: rgba(255, 255, 255, 0.98);
                 backdrop-filter: blur(20px);
                 flex-direction: column;
                 align-items: center;
@@ -1011,8 +1007,6 @@
             .hero-content h1 {
                 font-size: 2.3rem;
             }
-
-            
 
             .card {
                 padding: 25px;
@@ -1074,8 +1068,8 @@
         .game-floating-btn .tooltip {
             position: absolute;
             right: 80px;
-            background: rgba(10, 10, 15, 0.95);
-            color: white;
+            background: rgba(255, 255, 255, 0.95);
+            color: #333333;
             padding: 10px 20px;
             border-radius: 10px;
             font-size: 14px;
@@ -1085,6 +1079,7 @@
             transition: all 0.3s ease;
             pointer-events: none;
             border: 1px solid rgba(108, 99, 255, 0.2);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
         .game-floating-btn:hover .tooltip {
@@ -1099,7 +1094,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(10, 10, 15, 0.98);
+            background: rgba(255, 255, 255, 0.98);
             backdrop-filter: blur(20px);
             z-index: 1001;
             display: none;
@@ -1117,7 +1112,7 @@
             position: relative;
             width: 100%;
             min-height: 100vh;
-            background: rgba(22, 22, 34, 0.95);
+            background: rgba(255, 255, 255, 0.95);
             padding: 20px;
             display: flex;
             flex-direction: column;
@@ -1131,7 +1126,7 @@
             right: 30px;
             width: 50px;
             height: 50px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.1);
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -1139,7 +1134,7 @@
             cursor: pointer;
             z-index: 1002;
             transition: all 0.3s ease;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(0, 0, 0, 0.2);
         }
 
         .game-close-btn:hover {
@@ -1149,7 +1144,7 @@
 
         .game-close-btn i {
             font-size: 20px;
-            color: white;
+            color: #333333;
         }
 
         .game-body {
@@ -1284,7 +1279,6 @@
             padding: 40px;
             border-radius: 20px;
             display: flex !important;
-            /* Force flex display */
             flex-direction: column;
             align-items: center;
             justify-content: center;
@@ -1352,7 +1346,7 @@
                 top: 70px;
                 left: 0;
                 width: 100%;
-                background: rgba(10, 10, 15, 0.95);
+                background: rgba(255, 255, 255, 0.98);
                 backdrop-filter: blur(20px);
                 flex-direction: column;
                 align-items: center;
@@ -1380,7 +1374,7 @@
                 margin-top: 10px;
             }
 
-            /* ADD THE HIDING CODE RIGHT HERE: */
+            /* Hiding game button on mobile */
             .game-floating-btn {
                 display: none !important;
             }
@@ -1569,6 +1563,7 @@
                 height: 60px;
             }
         }
+
         .hero-image {
             position: relative;
             display: flex;
@@ -1590,13 +1585,12 @@
             content: '';
             position: absolute;
             inset: -4px;
-            background: linear-gradient(45deg, 
-                #4facfe, 
-                #00f2fe, 
-                #667eea, 
-                #764ba2, 
-                #4facfe
-            );
+            background: linear-gradient(45deg,
+                    #4facfe,
+                    #00f2fe,
+                    #667eea,
+                    #764ba2,
+                    #4facfe);
             background-size: 300% 300%;
             border-radius: 50%;
             animation: gradient-rotate 3s linear infinite;
@@ -1604,9 +1598,17 @@
         }
 
         @keyframes gradient-rotate {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
         }
 
         /* Inner glow effect */
@@ -1621,10 +1623,13 @@
         }
 
         @keyframes pulse-glow {
-            0%, 100% {
+
+            0%,
+            100% {
                 transform: scale(1);
                 opacity: 0.5;
             }
+
             50% {
                 transform: scale(1.1);
                 opacity: 0.8;
@@ -1637,20 +1642,21 @@
             height: 100%;
             object-fit: cover;
             border-radius: 50%;
-            border: 6px solid #0f0c29;
-            box-shadow: 
-                0 0 30px rgba(79, 172, 254, 0.4),
-                0 0 60px rgba(0, 242, 254, 0.2),
-                inset 0 0 20px rgba(0, 0, 0, 0.3);
+            border: 6px solid #ffffff;
+            box-shadow:
+                0 0 30px rgba(79, 172, 254, 0.3),
+                0 0 60px rgba(0, 242, 254, 0.15),
+                inset 0 0 20px rgba(0, 0, 0, 0.1);
             transition: transform 0.5s ease, box-shadow 0.5s ease;
+            background: white;
         }
 
         .profile-img:hover {
             transform: scale(1.05);
-            box-shadow: 
-                0 0 50px rgba(79, 172, 254, 0.6),
-                0 0 80px rgba(0, 242, 254, 0.4),
-                inset 0 0 20px rgba(0, 0, 0, 0.3);
+            box-shadow:
+                0 0 50px rgba(79, 172, 254, 0.5),
+                0 0 80px rgba(0, 242, 254, 0.3),
+                inset 0 0 20px rgba(0, 0, 0, 0.1);
         }
 
         /* Floating particles */
@@ -1701,18 +1707,23 @@
         }
 
         @keyframes float-particle {
-            0%, 100% {
+
+            0%,
+            100% {
                 transform: translateY(0) scale(1);
                 opacity: 0.6;
             }
+
             25% {
                 transform: translateY(-15px) scale(1.2);
                 opacity: 1;
             }
+
             50% {
                 transform: translateY(-30px) scale(0.8);
                 opacity: 0.6;
             }
+
             75% {
                 transform: translateY(-15px) scale(1.2);
                 opacity: 1;
@@ -1744,8 +1755,13 @@
         }
 
         @keyframes rotate-ring {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
         }
 
         /* Corner accents */
@@ -1789,10 +1805,13 @@
         }
 
         @keyframes corner-glow {
-            0%, 100% {
+
+            0%,
+            100% {
                 opacity: 0.4;
                 box-shadow: none;
             }
+
             50% {
                 opacity: 1;
                 box-shadow: 0 0 20px currentColor;
@@ -1820,7 +1839,10 @@
                 height: 30px;
             }
 
-            .corner-tl, .corner-tr, .corner-bl, .corner-br {
+            .corner-tl,
+            .corner-tr,
+            .corner-bl,
+            .corner-br {
                 top: -20px;
                 bottom: -20px;
                 left: -20px;
@@ -2209,7 +2231,7 @@
             <div class="projects-grid">
                 <div class="project-card card">
                     <div class="project-image">
-                        <img src="Images/Omac.jpg" alt="OMAC Project">
+                        <img src="Images/Omac.png" alt="OMAC Project">
                         <!-- <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
