--- a/index.html
+++ b/index.html
@@ -1464,7 +1464,7 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             z-index: 2;
-            animation: glow-pulse 3s ease-in-out infinite;
+            animation: glow-pulse 3s ease-in-out infgiinite;
         }
 
         @keyframes glow-pulse {
